Fix layout issue with Umbraco PR 11901
That PR adds a "top:50px" which for some reason pushes the toolbar down
when an RTE is used within a ContentBlock inside an Umbraco tab.
Our p-block__main has overflow: hidden but this does not seem to do anything
so we can remove it to fix this bugged interaction with that PR's change.

--- a/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-block.less
+++ b/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-block.less
@@ -35,7 +35,6 @@
         border-top: 1px solid @umbraco-border;
         padding: @block-margin/4 @block-margin/3;
         background: white;
-        overflow: hidden;
     }
 
     &__reorder {
